- Corregir error conceptual de stocks. - Crear nuevo LinkedHashMap para relacionar Articulo y stock de estos. - Implementadas modificaciones en artículos y pedidos. - Recalculados precios de envío y total, aplicando descuentos e incrementos según cantidad. - Implementados múltiples controles de errores. - Adaptados tests a la nueva lógica. - Corregidos múltiples errores lógicos.