@@ -1,24 +1,24 @@
 import javalinos.onlinestore.modelo.gestores.ModeloArticulos;
 import javalinos.onlinestore.modelo.primitivos.Articulo;
-import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import java.util.List;
+import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 public class ModeloArticulosTest {
 
     ModeloArticulos mArticulos;
-    List<Articulo> articulos;
 
     @BeforeEach
     void setUp() {
         mArticulos = new ModeloArticulos();
-        testLoadArticulos();
-        articulos = mArticulos.getArticulos();
+        mArticulos.loadArticulos(0);
     }
+
     @AfterEach
     void tearDown() {
         mArticulos = null;
@@ -26,54 +26,84 @@ public class ModeloArticulosTest {
 
     @Test
     void testLoadArticulos() {
-        mArticulos.loadArticulos(0);
-        articulos = mArticulos.getArticulos();
-        assertEquals(9, articulos.size());
+        List<Articulo> articulos = mArticulos.getArticulos();
+        assertEquals(9, articulos.size(), "Debe haber 9 artículos cargados");
     }
 
     @Test
     void testMakeArticulo() {
-        Articulo articulo = mArticulos.makeArticulo("Prueba", 15.45f, 0.43f, 36);
+        Articulo articulo = mArticulos.makeArticulo("Prueba", 15.45f, 0.43f);
         assertEquals("Prueba", articulo.getDescripcion());
         assertEquals(15.45f, articulo.getPrecio(), 0.001);
         assertEquals(0.43f, articulo.getPreparacion(), 0.001);
-        assertEquals(36, articulo.getStock());
-        mArticulos.addArticulo(articulo);
-        assertSame(articulo, mArticulos.getArticulo(9));
+        assertTrue(articulo.getCodigo().startsWith("ART"));
     }
 
     @Test
-    void testAddArticulo() {
-        Articulo articulo = mArticulos.makeArticulo("Prueba", 15.45f, 0.43f, 36);
-        mArticulos.addArticulo(articulo);
+    void testAddArticuloAndStock() {
+        Articulo nuevo = mArticulos.makeArticulo("Prueba", 12.5f, 0.2f);
+        mArticulos.addArticulo(nuevo);
+        mArticulos.addStockArticulo(nuevo, 7);
+
         List<Articulo> articulos = mArticulos.getArticulos();
-        assertEquals(10, articulos.size());
+        Map<Articulo, Integer> stock = mArticulos.getStockArticulos();
+
+        assertTrue(articulos.contains(nuevo));
+        assertEquals(7, stock.get(nuevo));
     }
 
     @Test
-    void testRemoveArticulo() {
-        List<Articulo> articulos = mArticulos.getArticulos();
-        mArticulos.removeArticulo(articulos.getFirst());
-        assertEquals(8, mArticulos.getArticulos().size());
+    void testRemoveArticuloAndStock() {
+        Articulo articulo = mArticulos.getArticulos().get(0);
+        mArticulos.removeArticulo(articulo);
+        mArticulos.removeStockArticulo(articulo);
+
+        assertFalse(mArticulos.getArticulos().contains(articulo));
+        assertFalse(mArticulos.getStockArticulos().containsKey(articulo));
     }
 
     @Test
-    void testGetArticulos() {
-        List<Articulo> articulos = mArticulos.getArticulos();
-        assertEquals(9, articulos.size());
+    void testUpdateArticulo() {
+        Articulo articuloOld = mArticulos.getArticulos().getFirst();
+        Articulo articuloNew = new Articulo(articuloOld.getCodigo(), "Nuevo nombre", 99.99f, 1.5f);
+        mArticulos.updateArticulo(articuloOld, articuloNew);
+
+        Articulo obtenido = mArticulos.getArticuloIndex(0);
+        assertEquals("Nuevo nombre", obtenido.getDescripcion());
+        assertEquals(99.99f, obtenido.getPrecio(), 0.001);
     }
 
     @Test
-    void testGetArticulo() {
-        mArticulos.getArticulo(1);
-        //assertSame();
+    void testUpdateStock() {
+        Articulo articulo = mArticulos.getArticulos().getFirst();
+        mArticulos.updateStockArticulo(articulo, 42);
+        assertEquals(42, mArticulos.getStockArticulos().get(articulo));
     }
 
     @Test
-    void testSetArticulos() {
-        List<Articulo> articulos = mArticulos.getArticulos();
-        mArticulos.setArticulos(articulos);
+    void testGetArticuloIndex() {
+        Articulo articulo = mArticulos.getArticulos().get(1);
+        assertEquals(articulo, mArticulos.getArticuloIndex(1));
+        assertNull(mArticulos.getArticuloIndex(-1));
+        assertNull(mArticulos.getArticuloIndex(100));
+    }
+
+    @Test
+    void testCheckArticulo() {
+        Articulo articulo = mArticulos.getArticulos().getFirst();
+        assertTrue(mArticulos.checkArticulo(articulo.getCodigo()));
+        assertFalse(mArticulos.checkArticulo("ART999"));
+    }
+
+    @Test
+    void testSetArticulosAndStock() {
+        List<Articulo> copia = List.copyOf(mArticulos.getArticulos());
+        Map<Articulo, Integer> stockCopia = Map.copyOf(mArticulos.getStockArticulos());
+
+        mArticulos.setArticulos(copia);
+        mArticulos.setStockArticulos(stockCopia);
+
         assertEquals(9, mArticulos.getArticulos().size());
+        assertEquals(9, mArticulos.getStockArticulos().size());
     }
-
 }
